Fix intro div width on small devices.

--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ span > .btn-victoria:hover {
   border-radius: 10px;
   background-color: var(--lightgrey);
   color: white;
-  width: 50rem;
+  width: 50%;
   margin: auto;
   text-align: center;
   margin: auto;
